openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fleet-status
  labels:
    app: fleet-status
